--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,11 @@ dependencies = [
   "omegaconf>=2.3",
   "scipy>=1.8",
   "scikit-image>=0.19",
-  "opencv-python>=4.5",
+  "opencv-python<=4",
   "torch>=2.0",
   "matplotlib",
   "timm>=0.9.0",
+  "tqdm>=4.64",
 ]
 
 # Optional runtime extras for submodules
@@ -35,6 +36,10 @@ dev = [
   "black>=23",
   "mypy>=1.5",
 ]
+
+
+[project.scripts]
+easylsd = "easylsd.detect:main"
 
 
 [tool.setuptools]
